feat(user): List showtimes
